<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTextHeader"
        android:fontFamily="@font/alegreya_medium"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/petalImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/group_28" />

    <Button
        android:id="@+id/btnStudentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/alegreya_regular"
        android:layout_marginTop="250dp"
        android:layout_marginStart="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/mainStudent"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTeacherList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/alegreya_regular"
        android:layout_marginEnd="40dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/mainTeacher"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStudentList"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTableList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/alegreya_regular"
        android:layout_marginTop="15dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/mainTable"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudentList" />

</androidx.constraintlayout.widget.ConstraintLayout>