<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightGreen">

    <EditText
        android:id="@+id/upStName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="email"
        android:backgroundTint="@color/darkGreen"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/studentInsertionNameText"
        android:inputType="text"
        android:layout_marginTop="100dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/darkGreen"
        android:textColorHint="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/upStGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:backgroundTint="@color/darkGreen"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/studentInsertionGroupText"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/darkGreen"
        android:textColorHint="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upStName" />

    <EditText
        android:id="@+id/upStAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:backgroundTint="@color/darkGreen"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/studentInsertionAgeText"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/darkGreen"
        android:textColorHint="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upStGroup" />

    <Button
        android:id="@+id/btnStudentUpdateData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkGreen"
        android:fontFamily="@font/alegreya_regular"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/otherUpdateText"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upStAge" />

</androidx.constraintlayout.widget.ConstraintLayout>