<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentActivity.StudentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentTextHeader"
        android:fontFamily="@font/alegreya_medium"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/petalImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/group_28" />

    <Button
        android:id="@+id/btnStudentInsertData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/alegreya_regular"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/otherInsert"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStudentFetchData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/alegreya_regular"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/otherFetch"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudentInsertData" />

</androidx.constraintlayout.widget.ConstraintLayout>