<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentActivity.StudentInsertionActivity">

    <ImageView
        android:id="@+id/group_28Image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/group_28" />

    <EditText
        android:id="@+id/nameStudentInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="email"
        android:backgroundTint="@color/textColorGray"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/studentInsertionNameText"
        android:inputType="text"
        android:layout_marginTop="100dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColorGray"
        android:textColorHint="@color/textColorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/groupStudentInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:backgroundTint="@color/textColorGray"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/studentInsertionGroupText"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColorGray"
        android:textColorHint="@color/textColorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameStudentInputField" />

    <EditText
        android:id="@+id/ageStudentInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:backgroundTint="@color/textColorGray"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/studentInsertionAgeText"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColorGray"
        android:textColorHint="@color/textColorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupStudentInputField" />

    <Button
        android:id="@+id/btnStudentSaveData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/alegreya_regular"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="100dp"
        android:paddingTop="15dp"
        android:paddingEnd="100dp"
        android:paddingBottom="15dp"
        android:text="@string/otherSaveData"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageStudentInputField" />

</androidx.constraintlayout.widget.ConstraintLayout>